[package]
name = "hal_sensor_dht"
version = "0.1.0"
authors = ["Karsten Lüth <kl@kloc-consulting.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/KLOC-Karsten/hal_sensor_dht"
homepage = "https://github.com/KLOC-Karsten/hal_sensor_dht"
description = "A Embedded HAL driver for the DHT humidity and temperature sensors."
readme = "README.md"
keywords = ["embedded", "sensors", "DHT"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
# By default, this library will not use floating points. But you can enable them.
floats = []

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]
